--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,16 @@
 {
+  "manifest version": "2",
+  
   "name": "TabCache",
   "description": "Sends all open tabs to given webhook",
-  "version": "0.01"
+  "version": "0.01",
+  
+  "browser_action": {
+   "default_icon": "send.png",
+   "default_popup": "send.html"
+  },
+  "permissions": [
+   "activeTab",
+   "tabs"
+  ]
 }
